# SDLVulkanRenderer

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  info.txt  info.txtclear  vcpkg.json
credits/: README.md
include/: Application.hpp  Camera.hpp  Drawable.hpp  KeyboardEvent.hpp  Rectangle.hpp  SimpleMessageBox.hpp  Suzanne.hpp  Triangle.hpp  VkImGui.hpp  VkInitializers.hpp  VkUtils.hpp  Vulkan.hpp  VulkanAllocator.hpp  VulkanCommands.hpp  VulkanFramebuffer.hpp  VulkanGraphicsPipeline.hpp  VulkanLogicalDevice.hpp  VulkanMesh.hpp  VulkanPhysicalDevice.hpp  VulkanRenderPass.hpp  VulkanShaderManager.hpp  VulkanSwapchain.hpp  VulkanSync.hpp  VulkanTypes.hpp  Window.hpp
include/Editor/: ImGuiEditorObject.hpp  MainMenuBar.hpp
include/Renderer/: Image.hpp  Material.hpp  Vertex.hpp
include/Renderer/OpenGL/: GL.hpp
include/Renderer/Vulkan/: Commands.hpp  Core.hpp  Framebuffer.hpp  LogicalDevice.hpp  MemoryAllocator.hpp  PhysicalDevice.hpp  Pipeline.hpp  RenderPass.hpp  Surface.hpp  Swapchain.hpp  Synchronization.hpp  Utilities.hpp  VK.hpp
resources/vulkan/icd.d/: MoltenVK_icd.json
scripts/: compile-shaders.sh  compile.shaders.bat
shaders/: mac.vert  redTriangle.frag  redTriangle.vert  shader.frag  shader.vert  triangleMesh.vert
src/: Application.cpp  Camera.cpp  DeltaTime.cpp  KeyboardEvent.cpp  Rectangle.cpp  Suzanne.cpp  VkImGui.cpp  VkInitializers.cpp  VkUtils.cpp  Vulkan.cpp  VulkanAllocator.cpp  VulkanMesh.cpp  VulkanPhysicalDevice.cpp  VulkanShaderManager.cpp  Window.cpp  main.cpp
src/Editor/: ImGuiEditorObject.cpp
src/Renderer/: Image.cpp  Material.cpp  Vertex.cpp
src/Renderer/Vulkan/: Commands.cpp  Core.cpp  Framebuffer.cpp  LogicalDevice.cpp  MemoryAllocator.cpp  PhysicalDevice.cpp  Pipeline.cpp  RenderPass.cpp  Surface.cpp  Swapchain.cpp  Synchronization.cpp  Utilities.cpp
